Fixed caching, multi frame prediction.

--- a/notebooks/training_sequence_net.ipynb
+++ b/notebooks/training_sequence_net.ipynb
@@ -49,8 +49,9 @@
     "    tracking_json_path=\"../data/training/tracking_E7_filtered.json\",\n",
     "    unet_model=model,\n",
     "    device=device,\n",
-    "    history_len=5,\n",
-    "    interpolation_window=15,\n",
+    "    history_len=30,\n",
+    "    future_len=5,\n",
+    "    stride=5,\n",
     "    interpolation_smoothness=5.0,\n",
     "    max_span=300,\n",
     "    cache_path=\"../data/models/grutracker/training_cache\",\n",
@@ -62,8 +63,8 @@
     "\n",
     "train_dataset, val_dataset = random_split(dataset, [train_size, val_size])\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=8, shuffle=True, num_workers=0)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=8, shuffle=False, num_workers=0)"
+    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True, num_workers=0)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=32, shuffle=False, num_workers=0)"
    ]
   },
   {
@@ -76,15 +77,15 @@
     "train_sample = train_dataset[0]\n",
     "val_sample = val_dataset[0]\n",
     "\n",
-    "train_heatmaps, train_offset, train_target = train_sample  # [T, 1, 224, 224], [2]\n",
-    "val_heatmaps, val_offset, val_target = val_sample        # [T, 1, 224, 224], [2]\n",
+    "train_heatmaps, train_past, train_future = train_sample\n",
+    "val_heatmaps, val_past, val_future = val_sample\n",
     "\n",
     "T = train_heatmaps.shape[0]\n",
     "fig, axs = plt.subplots(2, T, figsize=(T * 3, 6))\n",
     "\n",
     "for i in range(T):\n",
-    "    t_offset = train_offset[i, :]\n",
-    "    v_offset = val_offset[i, :]\n",
+    "    t_offset = train_past[i, :]\n",
+    "    v_offset = val_past[i, :]\n",
     "\n",
     "    axs[0, i].imshow(train_heatmaps[i, 0], cmap='hot')\n",
     "    axs[0, i].set_title(f\"Train Frame {i}: ({t_offset[0]:.2f}, {t_offset[1]:.2f})\")\n",
@@ -94,7 +95,7 @@
     "    axs[1, i].set_title(f\"Val Frame {i}: ({v_offset[0]:.2f}, {v_offset[1]:.2f})\")\n",
     "    axs[1, i].axis('off')\n",
     "\n",
-    "plt.suptitle(f\"Train target: ({train_target[0]:.2f}, {train_target[1]:.2f}), Val target: ({val_target[0]:.2f}, {val_target[1]:.2f})\")\n",
+    "plt.suptitle(f\"Train target: ({train_future[0, 0]:.2f}, {train_future[0, 1]:.2f}), Val target: ({val_future[0, 0]:.2f}, {val_future[0, 1]:.2f})\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
@@ -107,7 +108,7 @@
    "outputs": [],
    "source": [
     "# Cell 6: Instantiate model, loss, optimizer\n",
-    "tracker = TrajectoryPredictionNet().to(device)\n",
+    "tracker = TrajectoryPredictionNet(pred_steps=1).to(device)\n",
     "optimizer = torch.optim.Adam(tracker.parameters(), lr=1e-3)\n",
     "loss_fn = torch.nn.MSELoss()"
    ]
@@ -131,7 +132,7 @@
     "best_val_loss = float('inf')\n",
     "losses = []\n",
     "\n",
-    "epochs = 30\n",
+    "epochs = 100\n",
     "epoch_save_interval = 10\n",
     "\n",
     "epoch_bar = tqdm(range(epochs), desc=\"Epochs\")\n",
@@ -236,7 +237,8 @@
     "        with torch.no_grad():\n",
     "            pred = model(heatmaps, rel_offsets).squeeze(0).cpu().numpy()\n",
     "\n",
-    "        print(f\"Pred: {pred}, Target: {target}\")\n",
+    "        pred = pred[0]\n",
+    "        target = target[0]  \n",
     "\n",
     "        # Get the middle coordinate of the image resolution\n",
     "        h, w = heatmaps.shape[3:]\n",
@@ -293,6 +295,9 @@
     "\n",
     "        with torch.no_grad():\n",
     "            pred = model(heatmaps, rel_offsets).squeeze(0).cpu().numpy()\n",
+    "\n",
+    "        pred = pred[0]\n",
+    "        target = target[0]\n",
     "\n",
     "        if metric == \"l2\":\n",
     "            error = np.linalg.norm(pred - target)\n",
@@ -383,7 +388,9 @@
     "            pred = model(heatmaps, rel_offsets).squeeze(0).cpu().numpy()  # [2]\n",
     "        heatmaps = heatmaps.squeeze(0).cpu()  # [T, 1, H, W]\n",
     "        rel_offsets = rel_offsets.squeeze(0).cpu().numpy()  # [T, 2]\n",
-    "        target = target.cpu().numpy()  # [2]\n",
+    "        target = target.cpu().numpy()[0]\n",
+    "\n",
+    "        pred = pred[0]\n",
     "        \n",
     "        # Create a blank canvas\n",
     "        canvas = np.zeros((canvas_size, canvas_size), dtype=np.float32)\n",
